# optitrack_perception_module

./: CMakeLists.txt  Readme.md  modules_plugins.xml  package.xml
include/optitrack_perception_module/: OptitrackPerceptionModule.h
src/: OptitrackPerceptionModule.cpp
